# ESP32

./: .env.config  PLAN.md  README.md  SPEC.md  docker-compose.yml  main.py
ESP32/: ESP32.ino
anc_service/: CNN.py  audio_plt.py  audio_receiver.py
backend/: .env.example  Makefile  PLAN.md  README.md  SPEC.md
backend/cmd/server/: main.go
backend/internal/aggregator/: sensor_buffer.go
backend/internal/database/: clickhouse.go  schema.go
backend/internal/ml/: predictor.go
backend/internal/models/: audio.go  device.go  sensor.go
backend/internal/mqtt/: client.go  multi_topic.go
backend/scripts/: test_publisher.py
docs/: PLAN.md  SPEC.md  clickhouse.md
grafana/: QUERIES.md  README.md  SETUP_CHECKLIST.md
grafana/dashboards/: device-detail.json  ml-metrics.json  system-health.json  system-overview.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: clickhouse.yml
ml_service/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  SPEC.md  config.yaml  pyproject.toml
ml_service/scripts/: create_initial_model.py  train_from_clickhouse.py
ml_service/src/: config.py  feature_processor.py  main.py  model_loader.py  mqtt_client.py  predictor.py
mqtt_backbone/: .gitignore  CLEANUP_SUMMARY.md  PLAN.md  QUICKSTART.md  QUICKSTART_CLEANUP.md  SPEC.md  docker-compose.yml  go.mod  go.sum
mqtt_backbone/cmd/server/: main.go
mqtt_backbone/model/: regression_model.json
mqtt_backbone/scripts/: cleanup_deprecated.sh  test_publisher.py  test_subscriber.py
server/: TODO  anc_server.py  anc_system.py  config.py
(+13 files in other folders)
